--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>MocanuGA Web Layer</title>
+    <title>Mocanuga Demos</title>
 </head>
 <body>
-
+    <a href="http://mocanuga.github.io/hideable/">Hideable</a>
+    <p>
+        It hides an element if not clicked on it or one of it's children.<br> 
+        Very good to use on menus</p>
 </body>
 </html>
