--- a/hideable/index.html
+++ b/hideable/index.html
@@ -1,8 +1,39 @@
 <html>
 <head>
   <title>Hideable jQuery Plugin</title>
+  <style>
+    #popup {background: #cccccc;border: 2px solid #800;border-radius: 5px;bottom: 30%;color: #800;display:none;padding: 15px;position: fixed;right: 30%;width: 150px;}
+  </style> 
 </head>
-<a href=""></a>
+<a id="demo1" href="javascript;">Hideable without callbacks</a>
+<a id="demo2" href="javascript:;">Hideable with callbacks</a>
 
+
+<div id="popup">
+  <p>This is a demo popup that hides when you click outside of it.</p>
+</div>
+<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 <script src="https://raw.githubusercontent.com/mocanuga/hideable/master/hideable.js" type="text/javascript"></script>
+<script type="text/javascript">
+  $(function() {
+    var div = $('#popup');
+    $('#demo1').on('click', function(e) {
+      div.show().hideable();
+    });
+    $('#demo2').on('click', function(e) {
+      div.show().hideable({
+        beforeHide: function() {
+          // do some stuff before we hide it
+          // can be an ajax request with the modifications made to the contents
+          // or whatever
+          alert('Callback before hiding the popup');
+        },
+        afterHide: function() {
+          // clean up after we hide the element
+          alert('Callback after hiding the popup');
+        }
+      });
+    });
+  });
+</script>
 </html>
