--- a/hideable/index.html
+++ b/hideable/index.html
@@ -12,8 +12,8 @@
 <div id="popup">
   <p>This is a demo popup that hides when you click outside of it.</p>
 </div>
-<script   src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-<script src="https://raw.githubusercontent.com/mocanuga/hideable/master/hideable.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+<script src="https://cdn.rawgit.com/mocanuga/hideable/master/hideable.js" type="text/javascript"></script>
 <script type="text/javascript">
   $(function() {
     var div = $('#popup');
